--- a/ImageSetCompression/ImageSetCompression.csproj
+++ b/ImageSetCompression/ImageSetCompression.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0-preview.7.20364.11" />
   </ItemGroup>
 
 </Project>
