--- a/ImageSetCompression.AndroidApp/ImageSetCompression.AndroidApp.csproj
+++ b/ImageSetCompression.AndroidApp/ImageSetCompression.AndroidApp.csproj
@@ -65,7 +65,10 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SettingsFragment.cs" />
+    <Compile Include="ViewFragment.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="CompressFragment.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
@@ -79,10 +82,7 @@
     <AndroidResource Include="Resources\layout\activity_main.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\app_bar_main.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-    <AndroidResource Include="Resources\layout\content_compress.xml">
+    <AndroidResource Include="Resources\layout\fragment_compress.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\nav_header_main.xml">
@@ -145,6 +145,14 @@
       <Project>{5858af00-1303-41c4-9b07-18877a931460}</Project>
       <Name>ImageSetCompression</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\fragment_view.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\preferences.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
